[package]
name = "mrb-sys"
version = "0.1.0"
authors = ["Charlie Somerville <charlie@charlie.bz>"]
edition = "2018"
links = "mruby"
description = "FFI bindings to mruby"
license = "MIT"
repository = "https://github.com/charliesome/mrb-rs"

[dependencies]

[build-dependencies]
bindgen = "0.55"
cc = "1.0"
